# Gmail-App-Project

./: App.js  CMakeLists.txt  Dockerfile.Bloom  Dockerfile.node  README.md  docker-compose.yml  package-lock.json  package.json  test_clients.sh
client/: Dockerfile  package-lock.json  package.json
client/public/: default-avatar.jpg_Zone.Identifier  index.html
client/src/: App.css  App.js  index.css  index.js
client/src/components/: CreateMailButton.js  MailCard.css  MailCard.js  MainLayout.js  ProtectedRoute.js  SidebarLayout.js  ToggleThemeButton.js  TopBar.js
client/src/context/: AuthContext.js  ThemeContext.js
client/src/pages/: Compose.css  Compose.js  Inbox.js  Labels.js  Login.js  MailView.css  MailView.js  Profile.css  Profile.js  Signup.css  Signup.js
client/src/utils/: authFetch.js
controllers/: BlacklistController.js  LabelController.js  MailController.js  UserController.js
middlewares/: auth.js
models/: Blacklist.js  Label.js  Mail.js  User.js
routes/: Api.js
services/: BlacklistService.js
src/BloomFilter/: BloomFilter.cpp  BloomFilter.h
src/HTTP_Methods/: DeleteMethod.cpp  DeleteMethod.h  GetMethod.cpp  GetMethod.h  IHTTPMethods.h  PostMethod.cpp  PostMethod.h
src/Hash/: DoubleStdHashFunction.cpp  DoubleStdHashFunction.h  IHashFunction.h  StdHashFunction.cpp  StdHashFunction.h
src/Main/: main.cpp
src/Server_Client/: Client.py  Server.cpp  Server.h
src/Tests/: TestBloomFilter.cpp  TestHTTPMethods.cpp  TestHashFunctions.cpp
src/ThreadPool/: ThreadPool.cpp  ThreadPool.h
